--- a/Study_Cloud/login.html
+++ b/Study_Cloud/login.html
@@ -9,55 +9,74 @@
     <style>
         body {
             background: linear-gradient(135deg, #4e73df 0%, #224abe 100%);
-            height: 100vh;
+            min-height: 100vh;
             display: flex;
             align-items: center;
+            padding: 20px 0;
+        }
+        .login-container {
+            max-width: 450px;
+            width: 100%;
+            margin: 0 auto;
         }
         .login-card {
             border-radius: 15px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+            overflow: hidden;
+        }
+        .card-body {
+            padding: 2.5rem;
         }
         .btn-login {
             background: #4e73df;
             color: white;
             transition: all 0.3s;
+            padding: 0.5rem 1rem;
         }
         .btn-login:hover {
             background: #3a5fcc;
             transform: translateY(-2px);
         }
+        .form-control {
+            padding: 0.75rem 1rem;
+            border-radius: 8px;
+        }
+        @media (max-width: 576px) {
+            .card-body {
+                padding: 1.5rem;
+            }
+            body {
+                padding: 15px;
+            }
+        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-6 col-lg-5">
-                <div class="card login-card">
-                    <div class="card-body p-5">
-                        <div class="text-center mb-4">
-                            <img src="assets/CC_Study Cloud.jpg" alt="Study Cloud Logo" width="80" class="mb-3">
-                            <h3 class="fw-bold">Masuk ke Study Cloud</h3>
-                            <p class="text-muted">Kelola tugas kuliah dengan lebih mudah</p>
-                        </div>
-                        <form id="loginForm">
-                            <div class="mb-3">
-                                <label for="email" class="form-label">Email</label>
-                                <input type="email" class="form-control" id="email" placeholder="nama@email.com" required>
-                            </div>
-                            <div class="mb-4">
-                                <label for="password" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="password" placeholder="Masukkan password" required>
-                            </div>
-                            <div class="d-grid mb-3">
-                                <button type="submit" class="btn btn-login btn-lg"> <a href="index.html"></a>Masuk</button>
-                            </div>
-                            <div class="text-center">
-                                <p class="mb-0">Belum punya akun? <a href="register.html">Daftar sekarang</a></p>
-                                <p><a href="forgot-password.html">Lupa password?</a></p>
-                            </div>
-                        </form>
-                    </div>
+    <div class="login-container">
+        <div class="card login-card">
+            <div class="card-body">
+                <div class="text-center mb-4">
+                    <img src="assets/CC_Study Cloud.jpg" alt="Study Cloud Logo" width="80" class="mb-3">
+                    <h3 class="fw-bold">Masuk ke Study Cloud</h3>
+                    <p class="text-muted">Kelola tugas kuliah dengan lebih mudah</p>
                 </div>
+                <form id="loginForm">
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="nama@email.com" required>
+                    </div>
+                    <div class="mb-4">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Masukkan password" required>
+                    </div>
+                    <div class="d-grid mb-3">
+                        <button type="submit" class="btn btn-login btn-lg">Masuk</button>
+                    </div>
+                    <div class="text-center">
+                        <p class="mb-0">Belum punya akun? <a href="register.html">Daftar sekarang</a></p>
+                        <p><a href="forgot-password.html">Lupa password?</a></p>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
